--- a/playbooks/createdir.yml
+++ b/playbooks/createdir.yml
@@ -1,7 +1,7 @@
 ---
 - name: CREATE DIRECTORY & COPY FILES
   hosts: all
-  remote_user: root
+  remote_user: utkalreddy
   tasks:
     - name: CREATE DOCKER DIRECTORY
       file:
