--- a/playbooks/createdir.yml
+++ b/playbooks/createdir.yml
@@ -1,7 +1,8 @@
 ---
 - name: CREATE DIRECTORY & COPY FILES
   hosts: localhost
-  connection:local
+  User: utkalreddy
+  connection: local
     tasks:
     - name: CREATE DOCKER DIRECTORY
       file:
