--- a/playbooks/createdir.yml
+++ b/playbooks/createdir.yml
@@ -1,14 +1,13 @@
 ---
-- name: CREATE DIRECTORY & COPY FILES
+  name: CREATE DIRECTORY & COPY FILES
   hosts: localhost
-  User: utkalreddy
   connection: local
   tasks: 
     - name: CREATE DOCKER DIRECTORY
       file: 
-        path: /opt/docker
-        state: directory
-        mode: "0755"
+         path: /opt/docker
+         state: directory
+         mode: "0755"
 
     - name: COPY DOCKERFILE
       copy: 
@@ -19,4 +18,4 @@
       copy: 
         src: ../webapp/target/webapp.war
         dest: /opt/docker
-
+---
