--- a/playbooks/createdir.yml
+++ b/playbooks/createdir.yml
@@ -1,19 +1,19 @@
 ---
-  hosts: localhost
-  connection: local
-  tasks: 
-    - name: CREATE DOCKER DIRECTORY
-      file: 
-         path: /opt/docker
-         state: directory
-         mode: "0755"
-
-    - name: COPY DOCKERFILE
-      copy: 
-         src:  ../Dockerfile
-         dest:  /opt/docker
-
-    - name: COPY WAR FILE
-      copy: 
-         src:  ../webapp/target/webapp.war
-         dest:  /opt/docker
+name: CREATE DIRECTORY & COPY FILES
+hosts: localhost
+connection: local
+tasks:
+  - name: CREATE DOCKER DIRECTORY
+    file:
+      path: /opt/docker
+      state: directory
+      mode: "0755"
+  - name: COPY DOCKERFILE
+    copy:
+      src: ../Dockerfile
+      dest: /opt/docker
+  - name: COPY WAR FILE
+    copy:
+      src: ../webapp/target/webapp.war
+      dest: /opt/docker
+...
