--- a/playbooks/createdir.yml
+++ b/playbooks/createdir.yml
@@ -3,17 +3,17 @@
   hosts: localhost
   connection: local
   tasks:
-- name: CREATE DOCKER DIRECTORY
-  file:
-     path: /opt/docker
-     state: directory
-     mode: "0755"
-- name: COPY DOCKERFILE
-  copy:
-     src: ../Dockerfile
-     dest: /opt/docker
-- name: COPY WAR FILE
-  copy:
-     src: ../webapp/target/webapp.war
-     dest: /opt/docker
+    name: CREATE DOCKER DIRECTORY
+    file:
+      path: /opt/docker
+      state: directory
+      mode: "0755"
+    name: COPY DOCKERFILE
+    copy:
+       src: ../Dockerfile
+       dest: /opt/docker
+    name: COPY WAR FILE
+    copy:
+       src: ../webapp/target/webapp.war
+       dest: /opt/docker
 ...
