--- a/playbooks/createdir.yml
+++ b/playbooks/createdir.yml
@@ -2,6 +2,7 @@
 - name: CREATE DIRECTORY & COPY FILES
   hosts: localhost
   connection: local
+  remote_user:root  
   tasks:
     - name: CREATE DOCKER DIRECTORY
       file:
