--- a/playbooks/createdir.yml
+++ b/playbooks/createdir.yml
@@ -2,7 +2,7 @@
 - name: CREATE DIRECTORY & COPY FILES
   hosts: localhost
   connection: local
-  remote_user: root  
+  remote_user: ec2-user  
   tasks:
     - name: CREATE DOCKER DIRECTORY
       file:
