--- a/playbooks/createdir.yml
+++ b/playbooks/createdir.yml
@@ -2,7 +2,8 @@
 - name: CREATE DIRECTORY & COPY FILES
   hosts: localhost
   connection: local
-  remote_user: ec2-user  
+  user: utkalreddy
+  become: yes
   tasks:
     - name: CREATE DOCKER DIRECTORY
       file:
