--- a/playbooks/createdir.yml
+++ b/playbooks/createdir.yml
@@ -1,8 +1,8 @@
 ---
 - name: CREATE DIRECTORY & COPY FILES
-  hosts: localhost
-  connection: local
-  user: root
+  hosts: 107.22.146.194
+  user: ec2-user
+  become: yes
   tasks:
     - name: CREATE DOCKER DIRECTORY
       file:
