--- a/playbooks/createdir.yml
+++ b/playbooks/createdir.yml
@@ -1,7 +1,8 @@
 ---
 - name: CREATE DIRECTORY & COPY FILES
   hosts: localhost
-  user: ec2-user
+  user: utkalreddy
+  password: Rajini86#
   become: yes
   tasks:
     - name: CREATE DOCKER DIRECTORY
