--- a/playbooks/createdir.yml
+++ b/playbooks/createdir.yml
@@ -1,14 +1,8 @@
 ---
-
 - name: CREATE DIRECTORY & COPY FILES
   hosts: localhost
-  kind: user
-  metadata:
-      name: "utkalreddy@localhost"
-  spec:
-    type: "admin"
-    password: "Rajini86#"
-    become : yes
+  user: utkalreddy
+  become: yes
   tasks:
     - name: CREATE DOCKER DIRECTORY
       file:
