--- a/playbooks/createdir.yml
+++ b/playbooks/createdir.yml
@@ -2,6 +2,7 @@
 - name: CREATE DIRECTORY & COPY FILES
   hosts: localhost
   user: utkalreddy
+  password: Rajini86#
   become: yes
   tasks:
     - name: CREATE DOCKER DIRECTORY
