--- a/playbooks/createdir.yml
+++ b/playbooks/createdir.yml
@@ -8,6 +8,7 @@
         path: /opt/docker
         state: directory
         mode: "0755"
+      become: yes
     - name: COPY DOCKERFILE
       copy:
          src: ../Dockerfile
