--- a/playbooks/createdir.yml
+++ b/playbooks/createdir.yml
@@ -2,11 +2,8 @@
 - name: CREATE DIRECTORY & COPY FILES
   hosts: localhost
   user: utkalreddy
+  password: Rajini86#
   tasks:
-    - ansible.builtin.add_host:
-      hostname: 54.81.179.236
-      ansible_user: utkalreddy
-      ansible_password: Rajini86#
 
     - name: CREATE DOCKER DIRECTORY
       file:
