--- a/playbooks/dockerpush.yml
+++ b/playbooks/dockerpush.yml
@@ -1,7 +1,7 @@
 ---
 - name: IMAGE PUSH
-  hosts: all
-  remote_user: root
+  hosts: localhost
+  remote_user: utkalreddy
   tasks:
     - name: TAG IMAGE WITH BUILD ID & LATEST
       shell: |
