--- a/playbooks/dockerpush.yml
+++ b/playbooks/dockerpush.yml
@@ -12,7 +12,7 @@
 
     - name: LOGIN DOCKERHUB & PUSH IMAGE ON REGISTRY
       shell: |        
-        docker login -u {{ dockerhub_user }} -p {{ dockerhub_pass }}
+        docker login -u {{ dockerhub_user }} -p {{ dockerhub_pass }} https://hub.docker.com/repository/docker
         docker push utkalreddy/{{ JOB_NAME }}:v1.{{ BUILD_ID }}
         docker push utkalreddy/{{ JOB_NAME }}:latest
 
