--- a/playbooks/dockerpush.yml
+++ b/playbooks/dockerpush.yml
@@ -2,6 +2,7 @@
 - name: IMAGE PUSH
   hosts: localhost
   remote_user: utkalreddy
+  become: : true
   tasks:
     - name: TAG IMAGE WITH BUILD ID & LATEST
       shell: |
