--- a/playbooks/dockerpush.yml
+++ b/playbooks/dockerpush.yml
@@ -1,7 +1,7 @@
 ---
 - name: IMAGE PUSH
   hosts: localhost
-  remote_user: utkalreddy
+  user: utkalreddy
   become: true
   tasks:
     - name: TAG IMAGE WITH BUILD ID & LATEST
