--- a/webapp/dockerfile.txt
+++ b/webapp/dockerfile.txt
@@ -3,4 +3,4 @@ From tomcat:8-jre8
 
 # Maintainer 
 MAINTAINER "utkalreddy" 
-COPY ./webapp.war /usr/local/tomcat/webapps
+COPY ./XYZtechnologies-1.0.war /usr/local/tomcat/webapps
