--- a/playbooks/dockerpush.yml
+++ b/playbooks/dockerpush.yml
@@ -7,8 +7,8 @@
       shell:
         cd /opt/docker;:
         docker build -t {{ JOB_NAME }}:v1.{{ BUILD_ID }} .
-        docker tag {{ JOB_NAME }}:v1.{{ BUILD_ID }} utkalreddy/{{ JOB_NAME }}:v1.{{ BUILD_ID }}
-        docker tag {{ JOB_NAME }}:v1.{{ BUILD_ID }} utkalreddy/{{ JOB_NAME }}:latest
+        docker tag "{{ JOB_NAME }}:v1.{{ BUILD_ID }} utkalreddy/{{ JOB_NAME }}:v1.{{ BUILD_ID }}"
+        docker tag "{{ JOB_NAME }}:v1.{{ BUILD_ID }} utkalreddy/{{ JOB_NAME }}:latest"
 
     - name: LOGIN DOCKERHUB & PUSH IMAGE ON REGISTRY
       shell: |        
