--- a/playbooks/dockerpush.yml
+++ b/playbooks/dockerpush.yml
@@ -9,8 +9,8 @@
         docker build -t {{ JOB_NAME }}:v1.{{ BUILD_ID }} .
 
     - name: LOGIN DOCKERHUB & PUSH IMAGE ON REGISTRY
-      shell: |        
-        docker login -u {{ dockerhub_user }} -p {{ dockerhub_pass }} https://hub.docker.com/repository/docker
+      shell:        
+        docker login -u utkalreddy -p {{ dockerhub_pass }}
         docker push utkalreddy/{{ JOB_NAME }}:v1.{{ BUILD_ID }}
         docker push utkalreddy/{{ JOB_NAME }}:latest
 
