--- a/playbooks/dockerpush.yml
+++ b/playbooks/dockerpush.yml
@@ -2,10 +2,10 @@
 - name: IMAGE PUSH
   hosts: localhost
   user: utkalreddy
+  PATH: /opt/docker
   tasks:
     - name: TAG IMAGE WITH BUILD ID & LATEST
       shell:
-        cd /opt/docker
         docker build -t {{ JOB_NAME }}:v1.{{ BUILD_ID }} .
 
     - name: LOGIN DOCKERHUB & PUSH IMAGE ON REGISTRY
