--- a/playbooks/dockerpush.yml
+++ b/playbooks/dockerpush.yml
@@ -4,18 +4,18 @@
   user: utkalreddy
   tasks:
     
-  - name: "TAG IMAGE WITH BUILD ID & LATEST"
+  - name: TAG IMAGE WITH BUILD ID & LATEST
     path: /opt/docker
     shell:
       docker build -t {{ JOB_NAME }}:v1.{{ BUILD_ID }} .
     
-  - name: "LOGIN DOCKERHUB & PUSH IMAGE ON REGISTRY"
+  - name: LOGIN DOCKERHUB & PUSH IMAGE ON REGISTRY
     shell:        
       docker login -u utkalreddy -p {{ dockerhub_pass }}
       docker push utkalreddy/{{ JOB_NAME }}:v1.{{ BUILD_ID }}
       docker push utkalreddy/{{ JOB_NAME }}:latest
 
-  - name: "REMOVE OLD IMAGES FROM SERVER"
+  - name: REMOVE OLD IMAGES FROM SERVER
     shell: docker rmi -f $(docker images 'utkalreddy:/{{ JOB_NAME }}' -a -q) &> /dev/null
 
   - name: LOGOUT DOCKERHUB
