--- a/playbooks/dockerpush.yml
+++ b/playbooks/dockerpush.yml
@@ -1,21 +1,18 @@
 ---
- - name: IMAGE PUSH
-   hosts: local
-   remote_user: root
-   tasks:
+- name: IMAGE PUSH
+  hosts: local
+  remote_user: root
+  tasks:
     
     name: TAG IMAGE WITH BUILD ID & LATEST
     shell:
-    chdir: /opt/docker
+      cd /opt/docker
       docker build -t igp_2 .
     
     name: LOGIN DOCKERHUB & PUSH IMAGE ON REGISTRY
     shell:        
-      docker login -u utkalreddy -p {{ dockerhub_pass }}
+      docker login -u utkalreddy -p 'Rajini86#'
       docker push utkalreddy/igp_2:latest
-
-    name: REMOVE OLD IMAGES FROM SERVER
-    shell: docker rmi -f $(docker images 'utkalreddy:/{{ JOB_NAME }}' -a -q) &> /dev/null
 
     name: LOGOUT DOCKERHUB
     shell: docker logout
