--- a/playbooks/dockerpush.yml
+++ b/playbooks/dockerpush.yml
@@ -1,16 +1,16 @@
 ---
- hosts: local
- remote_user: root
- tasks:
-    
-   name: TAG IMAGE WITH BUILD ID & LATEST
-   shell:
-     cd /opt/docker
-     docker build -t igp_2 .
+- hosts: local
+- remote_user: root
+- tasks:
+
+    name: TAG IMAGE WITH BUILD ID & LATEST
+    shell: 
+      cd /opt/docker
+      docker build -t igp_2 .
    
-   name: LOGIN DOCKERHUB & PUSH IMAGE ON REGISTRY
-   shell:        
-     docker login -u utkalreddy -p 'Rajini86#'
-     docker push utkalreddy/igp_2:latest
+    name: LOGIN DOCKERHUB & PUSH IMAGE ON REGISTRY
+    shell:         
+      docker login -u utkalreddy -p 'Rajini86#'
+      docker push utkalreddy/igp_2:latest
  
 ...
