--- a/playbooks/dockerpush.yml
+++ b/playbooks/dockerpush.yml
@@ -1,6 +1,6 @@
 ---
 - name: docker
-  hosts: local
+  hosts: localhost
   remote_user: root
   tasks:
     - name: TAG IMAGE WITH BUILD ID & LATEST
