--- a/playbooks/pod_create.yml
+++ b/playbooks/pod_create.yml
@@ -1,6 +1,6 @@
 ---
 - name: DEPLOYMENT ON EKS
-  hosts: eks
+  hosts: 34.204.7.60,35.175.124.91
   remote_user: root
   tasks:  
     - name: CREATE PLAYBOOKS DIR ON EKS CLUSTER
